--- a/reference_data/platforms.yaml
+++ b/reference_data/platforms.yaml
@@ -347,6 +347,16 @@
       production: true
       priority: 10
     - arch: ppc64le
+      name: almalinux-8-devel-debuginfo
+      export_path: vault/8/devel/debug/ppc64le/
+      remote_url: https://repo.almalinux.org/vault/8/devel/debug/ppc64le/
+      type: rpm
+      debug: false
+      remote_sync_policy: on_demand
+      repository_sync_policy: additive
+      production: true
+      priority: 10
+    - arch: ppc64le
       name: alma8-distribution-ppc64le
       remote_url: https://build.almalinux.org/pulp/content/builds/almalinux8-AlmaLinux-8-ppc64le-dr/
       type: rpm
