Update AlmaLinux platforms
- Update chroots to use almalinux-release
- Added modules version 8.6 to AlmaLinux 8
- Use c9/a9 branch prefixes for AlmaLinux 9

--- a/reference_data/platforms.yaml
+++ b/reference_data/platforms.yaml
@@ -18,6 +18,9 @@
       - name: '8.5'
         version_prefix: '80500'
         dist_prefix: 'el8.5.0'
+      - name: '8.6'
+        version_prefix: '80600'
+        dist_prefix: 'el8.6.0'
   type: rpm
   arch_list:
     - i686
@@ -36,7 +39,7 @@
       packager: AlmaLinux Packaging Team <packager@almalinux.org>
       vendor: AlmaLinux
     mock:
-      chroot_setup_cmd: install tar gcc-c++ redhat-rpm-config redhat-release which xz sed
+      chroot_setup_cmd: install tar gcc-c++ redhat-rpm-config almalinux-release which xz sed
         make bzip2 gzip gcc coreutils unzip shadow-utils diffutils cpio bash gawk rpm-build
         info patch util-linux findutils grep zlib scl-utils scl-utils-build git-core
         kernel-rpm-macros
@@ -777,7 +780,7 @@
       packager: AlmaLinux Packaging Team <packager@almalinux.org>
       vendor: AlmaLinux
     mock:
-      chroot_setup_cmd: install tar gcc-c++ redhat-rpm-config redhat-release which xz sed
+      chroot_setup_cmd: install tar gcc-c++ redhat-rpm-config almalinux-release which xz sed
         make bzip2 gzip gcc coreutils unzip shadow-utils diffutils cpio bash gawk rpm-build
         info patch util-linux findutils grep zlib scl-utils scl-utils-build git-core
         kernel-rpm-macros
